Revision 107: + es kann nun konfiguriert werden dass die Gateway-deaktiviert Warnung   in konfigurierbaren Abständen erneut abgespielt wird + es kann nun konfiguriert werden dass die Gateway-Offline Warnung in   konfigurierbaren Abständen erneut abgespielt wird

--- a/FFN-GUI-Switcher/Properties/Settings.settings
+++ b/FFN-GUI-Switcher/Properties/Settings.settings
@@ -206,5 +206,17 @@
     <Setting Name="NotifyIfSpeakPauseFail" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="ReplayGatewayDeactivated" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="ReplayGatewayDeactivatedSeconds" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">300</Value>
+    </Setting>
+    <Setting Name="ReplayGatewayOffline" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="ReplayGatewayOfflineSeconds" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">300</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
