--- a/FFN-GUI-Switcher/app.config
+++ b/FFN-GUI-Switcher/app.config
@@ -211,6 +211,18 @@
             <setting name="NotifyIfSpeakPauseFail" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ReplayGatewayDeactivated" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ReplayGatewayDeactivatedSeconds" serializeAs="String">
+                <value>300</value>
+            </setting>
+            <setting name="ReplayGatewayOffline" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ReplayGatewayOfflineSeconds" serializeAs="String">
+                <value>300</value>
+            </setting>
         </FFN_Switcher.Properties.Settings>
     </userSettings>
 </configuration>
