Revision 110: * Maximallänge eines Durchlaufs -> Minimalwert nun 5 Minuten statt 0 Minuten   (es bestand die Gefahr dass versehentlich zu kleine Werte eingestellt werden) + Es wird nun vor dem Beenden des Switchers gefragt ob der Switcher wirklich beendet werden soll   (dieses neue Verhalten ist abschaltbar in den Allgemeinen Einstellungen) * Die Beschreibung "Warte ZZms auf Nachtasten" in allgemeine Einstellungen war verwirrend,   wurde geändert auf "Warte ZZms bis Träger abfällt"

--- a/FFN-GUI-Switcher/Properties/Settings.settings
+++ b/FFN-GUI-Switcher/Properties/Settings.settings
@@ -218,5 +218,8 @@
     <Setting Name="ReplayGatewayOfflineSeconds" Type="System.Decimal" Scope="User">
       <Value Profile="(Default)">300</Value>
     </Setting>
+    <Setting Name="AskBeforeQuit" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
