Revision 111: * Bugfix "Fragen bevor Beenden" * Experimentale Einstellungen können nun aktiviert werden, dann können interne Zeiten beeinflusst werden   -> das ganze ist als Experimentiermöglichkeit gedacht um Erfahrungen mit anderen Zeiten zu machen + Experimentelle Einstellmöglichkeiten für interne Zeitabläufe

--- a/FFN-GUI-Switcher/Properties/Settings.settings
+++ b/FFN-GUI-Switcher/Properties/Settings.settings
@@ -221,5 +221,32 @@
     <Setting Name="AskBeforeQuit" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="WaitForTeamspeakClientTime" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">1000</Value>
+    </Setting>
+    <Setting Name="WaitForPausedTeamspeakClient" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">1000</Value>
+    </Setting>
+    <Setting Name="ExperimentalOptionsEnabled" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="WaitWhenTeamspeakIsLyingAboutVoice" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">100</Value>
+    </Setting>
+    <Setting Name="WaitBeforeNextTSReconnectTry" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">1000</Value>
+    </Setting>
+    <Setting Name="WaitBeforeConnectToTS" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">1000</Value>
+    </Setting>
+    <Setting Name="WaitForChannelList" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">1000</Value>
+    </Setting>
+    <Setting Name="WaitForReconnectAfterTriedBefore" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">300000</Value>
+    </Setting>
+    <Setting Name="TeamspeakUpdateTime" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">500</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
