--- a/FFN-GUI-Switcher/app.config
+++ b/FFN-GUI-Switcher/app.config
@@ -226,6 +226,33 @@
             <setting name="AskBeforeQuit" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="WaitForTeamspeakClientTime" serializeAs="String">
+                <value>1000</value>
+            </setting>
+            <setting name="WaitForPausedTeamspeakClient" serializeAs="String">
+                <value>1000</value>
+            </setting>
+            <setting name="ExperimentalOptionsEnabled" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="WaitWhenTeamspeakIsLyingAboutVoice" serializeAs="String">
+                <value>100</value>
+            </setting>
+            <setting name="WaitBeforeNextTSReconnectTry" serializeAs="String">
+                <value>1000</value>
+            </setting>
+            <setting name="WaitBeforeConnectToTS" serializeAs="String">
+                <value>1000</value>
+            </setting>
+            <setting name="WaitForChannelList" serializeAs="String">
+                <value>1000</value>
+            </setting>
+            <setting name="WaitForReconnectAfterTriedBefore" serializeAs="String">
+                <value>300000</value>
+            </setting>
+            <setting name="TeamspeakUpdateTime" serializeAs="String">
+                <value>500</value>
+            </setting>
         </FFN_Switcher.Properties.Settings>
     </userSettings>
 </configuration>
