Revision 112: + Automatische Stummschaltung für definierbare Anzahl Millisekunden nachdem das Gateway gesprochen hat um Nachtasten zu verhindern. + wenn der Durchgang zu lang ist wird das entsprechend im Log vermerkt

--- a/FFN-GUI-Switcher/Properties/Settings.settings
+++ b/FFN-GUI-Switcher/Properties/Settings.settings
@@ -248,5 +248,11 @@
     <Setting Name="TeamspeakUpdateTime" Type="System.Decimal" Scope="User">
       <Value Profile="(Default)">500</Value>
     </Setting>
+    <Setting Name="MuteGatewayAfterTalking" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="MuteGatewayAfterTalkingTime" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">300</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
