--- a/FFN-GUI-Switcher/app.config
+++ b/FFN-GUI-Switcher/app.config
@@ -253,6 +253,12 @@
             <setting name="TeamspeakUpdateTime" serializeAs="String">
                 <value>500</value>
             </setting>
+            <setting name="MuteGatewayAfterTalking" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="MuteGatewayAfterTalkingTime" serializeAs="String">
+                <value>300</value>
+            </setting>
         </FFN_Switcher.Properties.Settings>
     </userSettings>
 </configuration>
